@@ -38,6 +38,10 @@
       inside File::Spec::VMS but is really a MakeMaker-only thing.
       (John E. Malmberg)
 
+    Other
+    * Remove ExtUtils::MakeMaker::bytes and vmsish which are unused and
+      seem to never have been used.
+
 
 6.50  Sun Mar 22 12:28:06 PDT 2009
     Windows    
